terraform/app/network.tf
resource "aws_vpc" "this" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  tags = merge(
    local.common_tags,
    { Name = "aws-ecs-app-vpc-network-1" }
  )
}

resource "aws_subnet" "public" {
  count = 2
  # index 0 -> 10.0.0.0/24 | index 1 -> 10.0.1.0/24
  cidr_block              = cidrsubnet(aws_vpc.this.cidr_block, 8, count.index)
  availability_zone       = data.aws_availability_zones.available_zones.names[count.index]
  vpc_id                  = aws_vpc.this.id
  map_public_ip_on_launch = true

  tags = {
    Name                     = "AWS ECS App Public Subnet ${count.index + 1}"
    "kubernetes.io/role/elb" = "1"
  }
}

resource "aws_subnet" "private" {
  count = 5
  # index 10 -> 10.0.10.0/24
  # index 11 -> 10.0.11.0/24
  # index 12 -> 10.0.12.0/24
  # index 13 -> 10.0.13.0/24
  cidr_block              = cidrsubnet(aws_vpc.this.cidr_block, 8, count.index + 10)
  availability_zone       = data.aws_availability_zones.available_zones.names[count.index % 2]
  vpc_id                  = aws_vpc.this.id
  map_public_ip_on_launch = false

  tags = {
    Name                              = "AWS ECS App Private Subnet ${count.index + 1}"
    "kubernetes.io/role/internal-elb" = 1
  }
}

resource "aws_subnet" "rds" {
  count             = 2
  cidr_block        = cidrsubnet(aws_vpc.this.cidr_block, 8, count.index + 4)
  availability_zone = data.aws_availability_zones.available_zones.names[count.index]
  vpc_id            = aws_vpc.this.id

  tags = {
    Name = "AWS ECS App RDS Private Subnet ${count.index + 1}"
  }
}

resource "aws_subnet" "rds_public" {
  count             = 2
  cidr_block        = cidrsubnet(aws_vpc.this.cidr_block, 8, count.index + 6)
  availability_zone = data.aws_availability_zones.available_zones.names[count.index]
  vpc_id            = aws_vpc.this.id

  tags = {
    Name = "AWS ECS App RDS read replica public subnet ${count.index + 1}"
  }
}

resource "aws_internet_gateway" "gateway" {
  vpc_id = aws_vpc.this.id
}

/*
resource "aws_route" "internet_access" {
  route_table_id         = aws_vpc.this.main_route_table_id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.gateway.id
}
*/

resource "aws_route_table" "public" {
  count  = 2
  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gateway.id
  }

  tags = {
    Name = "AWS ECS Public Route Table ${count.index + 1}"
  }
}

resource "aws_route_table_association" "public" {
  count          = 2
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public[count.index].id
}

resource "aws_route_table_association" "rds_public" {
  count          = 2
  subnet_id      = aws_subnet.rds_public[count.index].id
  route_table_id = aws_route_table.public[count.index].id
}

resource "aws_eip" "gateway" {
  count      = 2
  domain     = "vpc"
  depends_on = [aws_internet_gateway.gateway]
}

resource "aws_nat_gateway" "gateway" {
  count         = 2
  subnet_id     = aws_subnet.public[count.index].id
  allocation_id = aws_eip.gateway[count.index].id

  depends_on = [aws_internet_gateway.gateway]
}

resource "aws_route_table" "private" {
  count  = 2
  vpc_id = aws_vpc.this.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.gateway[count.index].id
  }

  tags = {
    Name = "AWS ECS Private Route Table ${count.index + 1}"
  }
}

resource "aws_route_table_association" "private" {
  count          = 5
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private[count.index % 2].id
}

resource "aws_route_table" "rds" {
  count  = 2
  vpc_id = aws_vpc.this.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = element(aws_nat_gateway.gateway.*.id, count.index)
  }

  tags = {
    Name = "AWS ECS Private Route Table ${count.index + 1}"
  }
}

resource "aws_route_table_association" "rds" {
  count          = 2
  subnet_id      = aws_subnet.rds[count.index].id
  route_table_id = aws_route_table.private[count.index].id
}

data "aws_region" "current" {}

resource "aws_vpc_endpoint" "s3_gateway" {
  vpc_id            = aws_vpc.this.id
  service_name      = "com.amazonaws.${data.aws_region.current.name}.s3"
  vpc_endpoint_type = "Gateway"

  tags = merge(
    local.common_tags,
    { Name = "S3 gateway endpoint" }
  )
}

resource "aws_vpc_endpoint_route_table_association" "private_s3" {
  count           = 2
  vpc_endpoint_id = aws_vpc_endpoint.s3_gateway.id
  route_table_id  = aws_route_table.private[count.index].id
}

# For learning purpose only - Network ACL Definition
/*
resource "aws_network_acl" "learning_nacl" {
  vpc_id     = aws_vpc.this.id
  subnet_ids = [aws_subnet.public[0].id]

  # --- INBOUND RULES ---

  # Allow inbound SSH (TCP 22)
  ingress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 22
    to_port    = 22
  }

  # Allow inbound HTTP (TCP 80)
  ingress {
    protocol   = "tcp"
    rule_no    = 110
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 80
    to_port    = 80
  }

  # Allow return response traffic from external servers on ephemeral ports
  ingress {
    protocol   = "tcp"
    rule_no    = 120
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 1024
    to_port    = 65535
  }

  # --- OUTBOUND RULES ---

  # Allow return response traffic to inbound clients on ephemeral ports
  egress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 1024
    to_port    = 65535
  }

  # Allow outbound HTTP (for repository package updates)
  egress {
    protocol   = "tcp"
    rule_no    = 110
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 80
    to_port    = 80
  }

  # Allow outbound HTTPS (for secure repository package updates)
  egress {
    protocol   = "tcp"
    rule_no    = 120
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 443
    to_port    = 443
  }

  tags = merge(
    local.common_tags,
    { Name = "aws-ecs-app-acl" }
  )
}
*/
