terraform/app/security.tf
resource "aws_security_group" "rds_public_sg" {
  name        = "rds-public-sg"
  vpc_id      = aws_vpc.this.id
  description = "Allow inbound access from internet"

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "bastion_vm" {
  name   = "bastion-vm"
  vpc_id = aws_vpc.this.id
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "rds_sg" {
  name        = "rds-security-group"
  description = "Allow traffic from the VM SG and ECS SG only"
  vpc_id      = aws_vpc.this.id

  ingress {
    description     = "Database access from VM and ECS"
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion_vm.id, aws_security_group.ecs_tasks.id, module.eks.node_security_group_id] # for EKS add module.eks.node_security_group_id
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "lb" {
  name        = "lb-sg"
  vpc_id      = aws_vpc.this.id
  description = "Controls access to the Application Load Balancer (ALB)"

  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}

locals {
  ingress_ports = [8080, 8501]
}

resource "aws_security_group" "ecs_tasks" {
  name        = "ecs-tasks-sg"
  vpc_id      = aws_vpc.this.id
  description = "Allow inbound access from the ALB only"

  /*
  ingress {
    protocol        = "tcp"
    from_port       = 8080
    to_port         = 8501
    cidr_blocks     = ["0.0.0.0/0"]
    security_groups = [aws_security_group.lb.id]
  }
*/

  dynamic "ingress" {
    for_each = local.ingress_ports
    content {
      protocol        = "tcp"
      description     = "Allow traffic on port ${ingress.value}"
      from_port       = ingress.value
      to_port         = ingress.value
      cidr_blocks     = ["0.0.0.0/0"]
      security_groups = [aws_security_group.lb.id]
    }
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "replica_sg" {
  name        = "rds-replica-sg"
  description = "Allow access to the public read replica"
  vpc_id      = aws_vpc.this.id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "replica_sg_allow_ecs" {
  name        = "rds-replica-allow-ingress-ecs-sg"
  description = "Allow traffic from ECS SG"
  vpc_id      = aws_vpc.this.id

  ingress {
    description     = "Database access from ECS"
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.ecs_tasks.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
